# bevy-hehe

./: Cargo.toml  README.md  build.rs  build.sh  index.html
.github/workflows/: deploy.yml
assets/config/: audio.csv  board_init.csv  item_generates.csv  items.csv  orders.csv
design/: activity.html
src/: audio.rs  board.rs  economy.rs  items.rs  main.rs  orders.rs  systems.rs  ui.rs
src/board/: actions.rs  components.rs  mod.rs
src/config/: mod.rs
src/items/: chains.rs  mod.rs  types.rs
src/orders/: components.rs  mod.rs  types.rs
src/systems/: animation.rs  drag.rs  logic.rs  mod.rs  visuals.rs
src/ui/: activity.rs  board.rs  mod.rs
