[package]
name = "bevy-hehe"
version = "0.1.0"
edition = "2021"
description = "合合游戏 (HeHe Game) - An ancient Chinese tea house themed merge puzzle game built with Bevy"
license = "MIT"

[dependencies]
bevy = { version = "0.18.1", default-features = true, features = [
    "mp3",
    "wav",
    "std",
] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
chrono = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimised WASM release: minimise binary size for faster page loads
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
